2006-02-10  A Balamurugan  <bala@zresearch.com>

	* doc/freeipmi.texi: updated.

	* fish/bmc-config.8.pre.in: updated.

2006-02-10  A Balamurugan  <bala@zresearch.com>

	* ipmi-raw/src/ipmi-raw.c: bug fix of command hex bytes execution.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* doc/examples/Makefile.am: fix for bug #15689, to build non-inst
	examples.

	* doc/examples/udm-test.c: updated.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* freeipmi.spec.in: updated.

	* doc/examples/Makefile.am: updated.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* doc/examples/ipmi-lan-test.c: removed.

	* doc/examples/Makefile.example: updated.

	* doc/examples/udm-test.c: updated.

2006-02-09  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Increment libfreeipmi version with release coming
	up.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-cmds.c,
	libfreeipmi/src/ipmi-pef-cmds.c, libfreeipmi/src/ipmi-sel-api.c,
	libfreeipmi/src/ipmi-sensor-api.c: fixed compiler warnings.

2006-02-09  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-cmds.h,
	libfreeipmi/src/ipmi-pef-cmds.h,
	libfreeipmi/src/ipmi-sdr-repo-cmds.h,
	libfreeipmi/src/ipmi-sel-cmds.h,
	libfreeipmi/src/ipmi-sensor-cmds.h,
	libfreeipmi/src/ipmi-serial-cmds.h,
	libfreeipmi/src/ipmi-sol-cmds.h: Add mising fill functions.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* ipmi-raw/doc/ipmi-raw.8.pre.in: updated.

	* ipmi-raw/src/ipmi-raw-argp.[ch]: added --file argument and
	command hex bytes as argument. fixed bug #15599 and bug #15600.

	* ipmi-raw/src/ipmi-raw.c: updated.

2006-02-09  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-cmds.c (fill_lan_set_arp,
	fill_lan_set_gratuitous_arp_interval,
	fill_lan_set_auth_type_enables, fill_lan_set_ip_addr_source,
	fill_lan_set_ip_addr, fill_lan_set_vlan_id,
	fill_lan_set_vlan_priority, fill_lan_set_subnet_mask,
	fill_lan_set_mac_addr, fill_get_lan_conf_param,