@@ -1,3 +1,8 @@
+2006-04-03  Anand Babu  <ab@zresearch.com>
+
+	* fish/extensions/sensors-common.scm: Closes bug# 16093. ipmi-sensors emiting wrong program name.
+	* libfreeipmi/src/smbios-locate.c: SMBIOS record length check fix.k
+
 2006-02-10  A Balamurugan  <bala@zresearch.com>
 
 	* doc/freeipmi.texi: updated.
